# json-to-excel-x8fsdj

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: backend-tests.yml  build.yml  cli-tests.yml  docs.yml  release.yml  web-tests.yml
blitzy/documentation/: Input Prompt.md  Project Guide.md  Technical Specifications.md
docs/: api_reference.md  architecture.md  developer_guide.md  installation.md  user_guide.md
docs/examples/: basic_conversion.md  batch_processing.md  handling_nested_json.md
infrastructure/docker/: Dockerfile.prod  docker-compose.prod.yml
infrastructure/scripts/: build_executables.bat  build_executables.sh  release.sh
src/backend/: .gitignore  README.md  __init__.py  config.py  constants.py  data_transformer.py  error_handler.py  excel_generator.py  exceptions.py  input_handler.py  json_parser.py  logger.py  pyproject.toml  requirements.txt  setup.py  utils.py
src/backend/adapters/: __init__.py  file_system_adapter.py
src/backend/config/: __init__.py  default_config.json  logging_config.json
src/backend/formatters/: __init__.py  column_formatter.py  excel_formatter.py
src/backend/models/: __init__.py  error_response.py  excel_options.py  json_data.py
src/backend/monitoring/: __init__.py  performance_tracker.py
src/backend/pipelines/: __init__.py  conversion_pipeline.py
src/backend/schemas/: __init__.py  json_schema.py
src/backend/scripts/: __init__.py  benchmark.py  generate_test_data.py  profile_memory_usage.py
src/backend/services/: __init__.py  conversion_service.py  validation_service.py
src/backend/tests/: __init__.py  test_conversion_service.py  test_data_transformer.py  test_error_handler.py  test_excel_generator.py  test_input_handler.py  test_json_parser.py  test_validation_service.py
src/backend/tests/fixtures/: __init__.py  excel_fixtures.py  json_fixtures.py
src/backend/tests/fixtures/sample_data/: arrays.json  complex.json  flat.json  invalid.json  nested.json
src/backend/tests/integration/: __init__.py  test_end_to_end.py  test_pipeline.py
src/backend/tests/performance/: __init__.py  test_complex_nesting.py  test_large_files.py
src/backend/validators/: __init__.py  file_validator.py  json_validator.py
src/cli/: .gitignore  __init__.py  argument_parser.py  command_runner.py  console_formatter.py  console_logger.py  error_display.py  help_text.py  json_to_excel.py  output_formatter.py  progress_bar.py  pyproject.toml  setup.cfg
src/cli/commands/: __init__.py  convert_command.py  help_command.py  info_command.py  validate_command.py
src/cli/config/: __init__.py  cli_config.json
src/cli/examples/: __init__.py  advanced_usage.md  basic_usage.md  batch_processing.md  error_handling.md
src/cli/formatters/: __init__.py  json_preview_formatter.py  table_formatter.py  text_formatter.py
src/cli/models/: __init__.py  cli_response.py  command_options.py
src/cli/scripts/: cli_completion.sh  install_cli.bat  install_cli.sh
src/cli/tests/: __init__.py
src/cli/tests/e2e/: __init__.py  test_cli_workflow.py
src/cli/tests/fixtures/: __init__.py  cli_fixtures.py
src/cli/tests/fixtures/sample_args/: basic_args.json  complex_args.json  invalid_args.json
src/cli/tests/integration/: __init__.py  test_cli_backend_integration.py  test_command_execution.py
src/cli/tests/unit/: __init__.py  test_argument_parser.py  test_command_runner.py  test_console_formatter.py  test_error_display.py  test_progress_bar.py
src/cli/utils/: __init__.py  console_utils.py  path_utils.py  time_utils.py
src/web/: .env.example  .gitignore  README.md  __init__.py  app.py  config.py  constants.py  gunicorn.conf.py  requirements.txt  routes.py  run.py  setup.py  wsgi.py
src/web/api/: __init__.py  conversion_api.py  endpoints.py  error_handler.py  job_api.py  status_api.py  upload_api.py
src/web/backend_interface/: __init__.py  conversion_client.py  serializers.py  service_client.py
src/web/config/: __init__.py  flask_config.py  upload_config.json  web_interface_config.json
src/web/docs/: API.md  DEPLOYMENT.md  SECURITY.md  STYLING.md  USAGE.md
src/web/exceptions/: __init__.py  api_exceptions.py  file_exceptions.py  job_exceptions.py
src/web/models/: __init__.py  conversion_job.py  conversion_options.py  job_status.py  upload_file.py  user_settings.py
src/web/scripts/: __init__.py  cleanup_uploads.py  setup_dev_environment.bat  setup_dev_environment.sh
src/web/security/: __init__.py  csrf_protection.py  file_sanitizer.py  (+2 more)
(+68 files in other folders)
