[build-system]
requires = ["setuptools>=67.0.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json-to-excel-converter-backend"
version = "1.0.0"
description = "Backend component for converting JSON data files into structured Excel spreadsheets"
authors = [
    {name = "Your Organization", email = "contact@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Utilities"
]
dependencies = [
    "pandas>=1.5.0",
    "openpyxl>=3.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "black>=23.1.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]
test = [
    "pytest>=7.3.0", 
    "pytest-cov>=4.0.0"
]
web = [
    "Flask>=2.3.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ["py39"]
include = "\.pyi?$"

[tool.flake8]
max-line-length = 100
exclude = ".git,__pycache__,build,dist"
ignore = "E203,W503"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true