[metadata]
name = json-to-excel-converter-cli
version = 1.0.0
description = Command-line interface for converting JSON data files into structured Excel spreadsheets
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Organization
author_email = contact@example.com
url = https://github.com/organization/json-to-excel-converter
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Office/Business
    Topic :: Utilities
keywords = json, excel, conversion, cli, data

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.9

[options.package_data]
json_to_excel_cli = config/*.json,examples/*.md

[options.install_requires]
pandas>=1.5.0
openpyxl>=3.1.0
colorama>=0.4.6
tqdm>=4.65.0
json-to-excel-converter-backend>=1.0.0

[options.extras_require]
dev =
    pytest>=7.3.0
    black>=23.1.0
    flake8>=6.0.0
    mypy>=1.0.0
test =
    pytest>=7.3.0
    pytest-cov>=4.0.0

[options.entry_points]
console_scripts =
    json2excel=json_to_excel:main

[tool:pytest]
testpaths = tests
python_files = test_*.py

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = E203,W503